Fix resume overflow and adjust icon styling

--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -84,17 +84,23 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: scroll;
+}
+.loading {
+  color: red;
 }
 .resume {
-  margin-top: 45px;
+  position: relative;
+  top: 110px;
+  margin-bottom: 20px;
 }
 .download-icon {
   display: flex;
   flex-direction: column;
   align-items: center;
   position: absolute;
-  top: 0;
-  right: 50px;
+  top: 5px;
+  right: 55px;
   width: 40px;
   &:hover {
     .download-arrow {
@@ -124,8 +130,8 @@
   display: flex;
   flex-direction: column;
   position: absolute;
-  top: 5px;
-  right: 5px;
+  top: 10px;
+  right: 10px;
   z-index: 3;
   width: 40px;
   height: 40px;
@@ -210,8 +216,5 @@
   }
   li {
     margin-bottom: 5px;
-  }
-  .resume {
-    margin: 0;
   }
 }
